# uwececa

./: .gitignore  Cargo.toml  LICENSE  dev  flake.nix  go.mod  go.sum
auth/: password.go  password_test.go  session.go  token.go
cmd/uwececa/: main.go
config/: config.go
crates/cfg/: Cargo.toml
crates/cfg/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  testing.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/mainsite/: Cargo.toml
crates/mainsite/src/: global_state.rs  lib.rs  templates.rs  views.rs
crates/templ/: Cargo.toml
crates/templ/src/: lib.rs
crates/utils/: Cargo.toml
db/: db.go  errors.go  filters.go  filters_test.go  migrations.go  migrations_test.go  updates.go  updates_test.go
db/dbtest/: dbtest.go
email/: mailer.go
form/: form.go
mailer/: mailer.go
mailer/templates/: verification.html  verification.txt.html
middleware/: auth.go  blogs.go  middleware.go
migrations/: 20250731224943_create_schema.down.sql  20250731224943_create_schema.up.sql
models/: emails.go  emails_test.go  migrations.go  session.go  session_test.go  site.go  site_test.go  user.go  user_test.go
request/: form.go
services/: blog.go  user.go
shutdown/: shutdown.go
site/: admin.go  auth.go  blogs.go  emails.go  errors.go  extractors.go  pages.go  site.go
site/middleware/: auth.go  blogs.go
site/static/: team.txt
site/templates/: 404.html  alert-error.html  error.html  home.html
site/templates/emails/: verification.html  verification.txt.html
site/templates/layouts/: base.html  public-base.html
site/templates/public/: alert-error.html  alert.html  blog-unverified.html  email-verification.html  error.html  home.html  login-signup.html  new-blog-response.html  new-blog.html  signup-response.html
templates/: context.go  templates.go  templates_test.go
templates/templates/: home.html
templates/templates/fragments/: fragment.html
templates/templates/layouts/: base.html
utils/: mailer.go  password.go  password_test.go  token.go
web/: handler.go  middleware.go  request.go  session.go  utils.go
