[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Lorenzo Good <foehammer@disroot.org>"]
license = "Apache-2.0"

[workspace.dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["chrono", "json", "postgres", "runtime-tokio", "tls-native-tls", "uuid"] }
tokio = { version = "1.47.0", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }


uwececa_cfg = {path = "crates/cfg"}
uwececa_db = {path = "crates/db"}
uwececa_macros = {path = "crates/macros"}
uwececa_templ = {path = "crates/templ"}
